Se completa listView personalizado

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,4 +39,7 @@
     <string name="special_pizza">Pizza especial</string>
     <string name="home_pizza">Deliciosa pizza de la casa</string>
     <string name="pizza_description">Pizza de carnes especialmente preparada por el restaurante a partir de los ingredientes seleccionados.</string>
+    <string name="update">Actualizar</string>
+    <string name="delete">Eliminar</string>
+    <string name="update_contact">Actualizar contacto</string>
 </resources>
